--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "deploy": "npm run build && gh-pages -d out"
   },
   "dependencies": {
+    "@radix-ui/react-switch": "^1.1.2",
+    "clsx": "^2.1.1",
     "next": "^15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
+    "react-toggle-dark-mode": "^1.1.1",
+    "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
